fixed login overlap issue

--- a/src/public/css/nav.css
+++ b/src/public/css/nav.css
@@ -6,6 +6,7 @@ div.modal-background {
   left: 0em;
   width: 100%;
   height: 100%;
+  z-index: 10;
 }
 
 nav#navBar div.signin {
